--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,7 @@ find_package(bytetrack REQUIRED)
 find_package(yaml-cpp REQUIRED)
 include_directories(./)
 
-file(GLOB SRC "./*.cpp" "utils/*.cpp" "image_process/yolo/*.cpp")
-
+file(GLOB SRC  "*.cpp" "utils/*.cpp" "image_process/yolo/*.cpp")
 add_executable(rk3588_hdmi_in ${SRC})
 target_link_libraries(rk3588_hdmi_in PRIVATE
         ${OpenCV_LIBS}
@@ -21,5 +20,9 @@ target_link_libraries(rk3588_hdmi_in PRIVATE
 )
 target_include_directories(rk3588_hdmi_in PRIVATE ${OpenCV_INCLUDE_DIRS} )
 
-add_executable(update_edid update_edid.cpp)
+add_executable(update_edid update_edid/update_edid.cpp)
 target_link_libraries(update_edid ${kaylordut_LIBS})
+
+add_executable(play_video play_video/main.cpp framebuffer.cpp)
+target_link_libraries(play_video ${kaylordut_LIBS} ${OpenCV_LIBS})
+target_include_directories(play_video PRIVATE ${OpenCV_INCLUDE_DIRS} )
